--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -1,68 +1,90 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.container {
+    margin: 0 auto;
+    padding: 20px;
+    max-width: 600px;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+.table {
+    display: table;
+    border-collapse: collapse;
+    border-spacing: 0;
+    width: 600px;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.filter-pill-bar {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.filter-pill {
+    border-radius: 25px;
+    padding: 0px 15px;
+    width: fit-content;
+}
+
+.filter-pill:hover {
+    cursor: pointer;
+    border: 1px solid #000000;
+}
+
+.active-filter-pill {
+    background-color: #a0a0a0;
+    border: 1px solid #a0a0a0;
+}
+
+.inactive-filter-pill {
+    background-color: #f0f0f0;
+    border: 1px solid #f0f0f0;
+}
+
+.sort-pill {
+    border-radius: 25px;
+    padding: 3px 15px;
+    width: fit-content;
+}
+
+.table-filter-sort {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+}
+
+thead {
+    display: table-header-group;
+    text-align: left;
+    border-color: inherit;
+}
+
+.right-align-column{
+    text-align: right;
+}
+
+th, td {
+    padding: 5px 15px;
+    text-align: left;
+}
+
+tr:hover {
+    cursor: pointer;
+    background-color: #f0f0f0;
 }
