--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -14,6 +14,9 @@ body {
     padding: 0;
     display: flex;
     justify-content: center;
+  
+    padding-top: 70px; 
+    
 }
 
 .container {
@@ -21,6 +24,56 @@ body {
     padding: 20px;
     max-width: 600px;
 }
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    padding: 0 20px; 
+    background-color: #f8f9fa; 
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    max-width: 100vw; 
+    box-sizing: border-box; 
+}
+
+.navbar__logo {
+    display: flex;
+    align-items: center;
+}
+
+.navbar__logo img {
+    height: 40px; 
+    cursor: pointer;
+}
+
+.link-to-favorites {
+    display: flex;
+    justify-content: flex-end;
+    flex-grow: 1; 
+}
+
+.link-to-favorites button {
+    background-color: #4CAF50; 
+    color: white; 
+    border: none; 
+    padding: 10px 20px; 
+    border-radius: 50px; 
+    font-size: 16px; 
+    cursor: pointer; 
+    transition: background-color 0.3s ease; 
+}
+
+.link-to-favorites button:hover {
+    background-color: #45a049; 
+}
+
+
 
 .table {
     display: table;
