--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -55,25 +55,30 @@ body {
 .link-to-favorites {
     display: flex;
     justify-content: flex-end;
-    flex-grow: 1; 
+    flex-grow: 1;
 }
 
 .link-to-favorites button {
-    background-color: #4CAF50; 
-    color: white; 
-    border: none; 
-    padding: 10px 20px; 
-    border-radius: 50px; 
-    font-size: 16px; 
-    cursor: pointer; 
-    transition: background-color 0.3s ease; 
+    background-color: #FFC0CB; /* Green background */
+    color: white; /* White icon */
+    border: none;
+    padding: 10px 20px;
+    border-radius: 50px; /* Rounded shape for pill-like button */
+    font-size: 16px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .link-to-favorites button:hover {
-    background-color: #45a049; 
+    background-color: #FFB6C1; /* Darker green on hover */
 }
 
-
+.link-to-favorites svg {
+    font-size: 24px; /* Adjust the size of the heart icon */
+}
 
 .table {
     display: table;
